# EmojiModule

./: .ccls  .clang-format  .clang-format-ignore  .clangd  .cmake-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  SolutionController.py  SolutionRenamer.py  SolutionUpgrader.py  conanfile.py  conantools.py
.github/workflows/: emscripten.yml  linux-clang.yml  linux-cross-aarch64.yml  linux-cross-mingw.yml  linux.yml  macos.yml  windows.yml
application/src/: Application.cpp
application/tests/: AssetManagerTest.cpp  ConsoleLoggerTest.cpp  FileReaderTest.cpp  MockAssetManager.hpp
assets/: customstrings.json  ems-mini.html
cmake/: CPM.cmake  project-application.cmake  project-common.cmake  project-library.cmake  project-tests.cmake  tmplt-assets.cmake  tmplt-coverage.cmake  tmplt-debug.cmake  tmplt-emscripten.cmake  tmplt-hardening.cmake  tmplt-ipo.cmake  tmplt-runtime.cmake  tmplt-sanitizer.cmake
docs/html/: Application_8cpp.html  Application_8cpp.js  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  Application_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  AssetManagerFactory_8hpp.html  AssetManagerFactory_8hpp.js  AssetManagerFactory_8hpp__dep__incl.map  AssetManagerFactory_8hpp__dep__incl.md5  AssetManagerFactory_8hpp__incl.map  AssetManagerFactory_8hpp__incl.md5  AssetManagerFactory_8hpp_source.html  AssetManagerTest_8cpp.html  AssetManagerTest_8cpp__incl.map  AssetManagerTest_8cpp__incl.md5  AssetManagerTest_8cpp_a08f42620f8e54d3a2e0804f9f064bd94_cgraph.map  AssetManagerTest_8cpp_a08f42620f8e54d3a2e0804f9f064bd94_cgraph.md5  AssetManagerTest_8cpp_a0b3d8f45924e169b41efc8e21cf54de7_cgraph.map  AssetManagerTest_8cpp_a2101e2c74d1ca5ddb1868403a1cde944_cgraph.map  (+1003 more)
src/: EmojiModuleLib.cpp
(+565 files in other folders)
